[gd_scene load_steps=21 format=3 uid="uid://wpfj0p0tut4c"]

[ext_resource type="Script" path="res://Script/UserInterface/CardInterface/CardInterface.gd" id="1_j6vpk"]
[ext_resource type="Script" path="res://Script/UserInterface/CardInterface/2dDiscard.gd" id="2_c6s3o"]
[ext_resource type="Texture2D" uid="uid://cvxc210p15xex" path="res://Sprites/Icon/Recycle/Recycle-Bin-Full.png" id="3_xuwso"]
[ext_resource type="Texture2D" uid="uid://dfv4iow0itlg2" path="res://Sprites/Icon/Recycle/Recycle-Bin-Empty.png" id="4_6ri8v"]
[ext_resource type="Script" path="res://Script/UserInterface/CardInterface/2dDiscardButton.gd" id="5_eikaw"]
[ext_resource type="Texture2D" uid="uid://b34qixu87bnmw" path="res://Sprites/Icon/Folder/Folder-Open.png" id="6_ph11q"]
[ext_resource type="FontFile" uid="uid://cbfnf36nahj73" path="res://Font/Free/PixeloidSansBold-PKnYd.ttf" id="7_o7dui"]
[ext_resource type="Script" path="res://Script/UserInterface/CardInterface/2dDeck.gd" id="8_suky8"]
[ext_resource type="Texture2D" uid="uid://ot58fvrchwn3" path="res://Sprites/Icon/Deck/Deck-Icon.png" id="9_fpoqd"]
[ext_resource type="Texture2D" uid="uid://2imbw8rutag4" path="res://Sprites/Icon/Deck/Deck-Icon-Empty.png" id="10_wy6ql"]
[ext_resource type="Script" path="res://Script/UserInterface/CardInterface/2dDeckButton.gd" id="11_fdfpi"]
[ext_resource type="Script" path="res://Script/UserInterface/CardInterface/2dHand.gd" id="12_jrm6g"]
[ext_resource type="PackedScene" uid="uid://smj5r4t8uqex" path="res://Scene/2d/2dCard.tscn" id="13_rdaic"]
[ext_resource type="Texture2D" uid="uid://4qgvra14vt1l" path="res://Sprites/Background/Windows Explorer.png" id="14_mgrf6"]
[ext_resource type="Script" path="res://Script/UserInterface/Debug.gd" id="15_23dk3"]

[sub_resource type="LabelSettings" id="LabelSettings_bix6v"]
font = ExtResource("7_o7dui")
font_size = 9
font_color = Color(0, 0, 0, 1)

[sub_resource type="Curve" id="Curve_2otwk"]
_data = [Vector2(0, 0), 0.0, 1.0, 0, 1, Vector2(1, 1), 1.0, 0.0, 1, 0]
point_count = 2

[sub_resource type="LabelSettings" id="LabelSettings_nf4ba"]
font = ExtResource("7_o7dui")
font_size = 9

[sub_resource type="RectangleShape2D" id="RectangleShape2D_8dawd"]
size = Vector2(510.667, 175.333)

[sub_resource type="LabelSettings" id="LabelSettings_om8la"]
font_color = Color(1, 1, 0, 1)

[node name="CardInterface" type="Node2D"]
script = ExtResource("1_j6vpk")

[node name="DiscardNode" type="Node2D" parent="."]
z_index = 1
position = Vector2(100, 725)
scale = Vector2(3, 3)
script = ExtResource("2_c6s3o")

[node name="DiscardButton" type="TextureButton" parent="DiscardNode"]
texture_filter = 1
offset_right = 30.0
offset_bottom = 35.0
disabled = true
texture_normal = ExtResource("3_xuwso")
texture_pressed = ExtResource("3_xuwso")
texture_hover = ExtResource("3_xuwso")
texture_disabled = ExtResource("4_6ri8v")
script = ExtResource("5_eikaw")
metadata/_edit_use_anchors_ = true

[node name="Folder" type="Sprite2D" parent="DiscardNode"]
texture_filter = 1
texture = ExtResource("6_ph11q")

[node name="Label" type="Label" parent="DiscardNode"]
texture_filter = 1
offset_left = -12.0
offset_top = -3.0
offset_right = 11.0
offset_bottom = 11.0
text = "0"
label_settings = SubResource("LabelSettings_bix6v")
horizontal_alignment = 1
vertical_alignment = 1
metadata/_edit_use_anchors_ = true

[node name="DeckNode" type="Node2D" parent="."]
z_index = 1
position = Vector2(1375, 725)
scale = Vector2(3, 3)
script = ExtResource("8_suky8")
DECK_SIZE = 10

[node name="DeckButton" type="TextureButton" parent="DeckNode"]
texture_filter = 1
offset_right = 32.0
offset_bottom = 33.0
texture_normal = ExtResource("9_fpoqd")
texture_pressed = ExtResource("9_fpoqd")
texture_hover = ExtResource("9_fpoqd")
texture_disabled = ExtResource("10_wy6ql")
script = ExtResource("11_fdfpi")
metadata/_edit_use_anchors_ = true

[node name="Folder" type="Sprite2D" parent="DeckNode"]
texture_filter = 1
position = Vector2(3, 4)
texture = ExtResource("6_ph11q")

[node name="Label" type="Label" parent="DeckNode"]
texture_filter = 1
offset_left = -10.3333
offset_top = 0.666672
offset_right = 12.6667
offset_bottom = 14.6667
text = "0
"
label_settings = SubResource("LabelSettings_bix6v")
horizontal_alignment = 1
vertical_alignment = 1
metadata/_edit_use_anchors_ = true

[node name="HandNode" type="Node2D" parent="."]
z_index = -1
script = ExtResource("12_jrm6g")
HAND_LOCATION_X = 340
HAND_LOCATION_Y = 725
CARD_SIZE = 0.5
TITLE = "Title"
DESCRIPTION = "Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua."
FLOPPY_DISK_ENUM = 1
BATTERY_ENUM = 1
IMAGE = "res://Sprites/CardImage/cat.jpg"
SPREAD_CURVE = SubResource("Curve_2otwk")
HAND_WIDTH = 880
CARD = ExtResource("13_rdaic")

[node name="Explorer" type="NinePatchRect" parent="."]
z_index = -1
texture_filter = 1
offset_left = 1.0
offset_top = 548.0
offset_right = 513.0
offset_bottom = 654.0
scale = Vector2(3, 3)
texture = ExtResource("14_mgrf6")
region_rect = Rect2(0, 0, 96, 96)
patch_margin_left = 32
patch_margin_top = 32
patch_margin_right = 32
patch_margin_bottom = 32

[node name="Label" type="Label" parent="Explorer"]
layout_mode = 0
offset_left = 4.33333
offset_top = 0.667007
offset_right = 53.3333
offset_bottom = 14.667
text = "Card Manager"
label_settings = SubResource("LabelSettings_nf4ba")
vertical_alignment = 1
metadata/_edit_use_anchors_ = true

[node name="PlayArea2D" type="Area2D" parent="Explorer"]

[node name="PlayCollisionShape2D" type="CollisionShape2D" parent="Explorer/PlayArea2D"]
position = Vector2(254.667, -97)
shape = SubResource("RectangleShape2D_8dawd")

[node name="Debug" type="Node2D" parent="."]
position = Vector2(1519, 8)
script = ExtResource("15_23dk3")

[node name="FrameRateLabel" type="Label" parent="Debug"]
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -40.0
offset_bottom = 23.0
grow_horizontal = 0
text = "FPS Counter: 0"
label_settings = SubResource("LabelSettings_om8la")

[connection signal="pressed" from="DiscardNode/DiscardButton" to="." method="_on_discard_button_pressed"]
[connection signal="pressed" from="DeckNode/DeckButton" to="." method="_on_deck_button_pressed"]
